--- a/TinDog-Start-master/index.html
+++ b/TinDog-Start-master/index.html
@@ -226,11 +226,12 @@
 
   <footer class="white-section" id="footer">
     <div class="container-fluid">
-      <i class="social-icon fab fa-facebook-f"></i>
-      <i class="social-icon fab fa-twitter"></i>
-      <i class="social-icon fab fa-instagram"></i>
-      <i class="social-icon fas fa-envelope"></i>
-      <p>© Copyright 2018 TinDog</p>
+      <a class="footer-link" href="https://www.facebook.com/harsh.mishra.982/"><i class="social-icon fab fa-facebook-f"></i></a>
+      <a class="footer-link" href="https://twitter.com/HarshVatsMishr1"><i class="social-icon fab fa-twitter"></i></a>
+      <a class="footer-link" href="https://www.instagram.com/harsh_vats_mishra/"><i class="social-icon fab fa-instagram"></i></a>
+      <a class="footer-link" href="mailto:harshvatsmishra@email.com"><i class="social-icon fas fa-envelope"></i></a>
+
+      <p>© Copyright 2020 Harsh Vats Mishra</p>
     </div>
   </footer>
 
